samples/_failures_safe/1761562551_279780_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_43124130.c: In function ‘tokenize’:
./samples/SAFE/__tmp_43124130.c:165: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_43124130.c:164:9: error: expected declaration or statement at end of input
  164 |         if
      |         ^~
./samples/SAFE/__tmp_43124130.c:164:9: error: expected declaration or statement at end of input
